--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/dotenv": "^8.2.0",
     "@types/node-fetch": "^2.5.7",
+    "dotenv": "^8.2.0",
     "form-data": "^3.0.0",
     "node-fetch": "^2.6.0",
     "typescript": "^3.9.2"
